--- a/config.org
+++ b/config.org
@@ -134,21 +134,21 @@ With Emacs 29 use-package is now built-in.
 
 *** Straight
 #+begin_src emacs-lisp
-(defvar bootstrap-version)
-(let ((bootstrap-file
-       (expand-file-name
-        "straight/repos/straight.el/bootstrap.el"
-        (or (bound-and-true-p straight-base-dir)
-            user-emacs-directory)))
-      (bootstrap-version 7))
-  (unless (file-exists-p bootstrap-file)
-    (with-current-buffer
-        (url-retrieve-synchronously
-         "https://raw.githubusercontent.com/radian-software/straight.el/develop/install.el"
-         'silent 'inhibit-cookies)
-      (goto-char (point-max))
-      (eval-print-last-sexp)))
-  (load bootstrap-file nil 'nomessage))
+;;(defvar bootstrap-version)
+;;(let ((bootstrap-file
+;;       (expand-file-name
+;;        "straight/repos/straight.el/bootstrap.el"
+;;        (or (bound-and-true-p straight-base-dir)
+;;            user-emacs-directory)))
+;;      (bootstrap-version 7))
+;;  (unless (file-exists-p bootstrap-file)
+;;    (with-current-buffer
+;;        (url-retrieve-synchronously
+;;         "https://raw.githubusercontent.com/radian-software/straight.el/develop/install.el"
+;;         'silent 'inhibit-cookies)
+;;      (goto-char (point-max))
+;;      (eval-print-last-sexp)))
+;;  (load bootstrap-file nil 'nomessage))
 #+end_src
 
 ** Evil Mode
@@ -1115,8 +1115,8 @@ A bunch of language specific key binds, using ~,~ as the leader key.
 
    Looks like this might be merged into core in 31
    #+begin_src emacs-lisp
-   (use-package treesit-fold
-     :straight (treesit-fold :type git :host github :repo "emacs-tree-sitter/treesit-fold"))
+   ;; (use-package treesit-fold
+   ;;   :straight (treesit-fold :type git :host github :repo "emacs-tree-sitter/treesit-fold"))
    #+end_src
    
 * Other Packages
