--- a/config.org
+++ b/config.org
@@ -1796,6 +1796,28 @@ This is where we increase our line count.
 (add-hook 'org-clock-out-hook #'save-buffer)
 #+end_src
 
+#+begin_src emacs-lisp
+;; Task States
+;;;;;;;;;;;;;;
+
+(setq org-todo-keywords
+      (quote ((sequence "TODO(t)" "NEXT(n)" "WIP(i)" "|" "DONE(d)")
+              (sequence "WAITING(w@/!)" "HOLD(h@/!)" "|" "CANCELLED(c@/!)"))
+      )
+)
+
+;; (setq org-todo-keyword-faces
+;;       (quote (("TODO" :foreground "red" :weight bold)
+;;               ("NEXT" :foreground "yellow" :weight bold)
+;;               ("DONE" :foreground "forest green" :weight bold)
+;;               ("WAITING" :foreground "orange" :weight bold)
+;;               ("HOLD" :foreground "magenta" :weight bold)
+;;               ("CANCELLED" :foreground "forest green" :weight bold)
+;;               )))
+
+(setq org-use-fast-todo-selection t)
+#+end_src
+
 Calendar Setup
 #+begin_src emacs-lisp
 (setq calendar-latitude 53.584)
@@ -1820,7 +1842,7 @@ Calendar Setup
      )
    #+end_src
 
-** Links
+** TODO Links
 
    Setting up some custom link notation for things I commonly link
 
