--- a/config.org
+++ b/config.org
@@ -572,7 +572,7 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
 
 ** TODO emacs-presentation-mode
    https://github.com/zonuexe/emacs-presentation-mode?tab=readme-ov-file
-
+   
 * Helper functions
   Many of these are lifted from doom.
 ** File management
@@ -1806,14 +1806,14 @@ This is where we increase our line count.
       )
 )
 
-;; (setq org-todo-keyword-faces
-;;       (quote (("TODO" :foreground "red" :weight bold)
-;;               ("NEXT" :foreground "yellow" :weight bold)
-;;               ("DONE" :foreground "forest green" :weight bold)
-;;               ("WAITING" :foreground "orange" :weight bold)
-;;               ("HOLD" :foreground "magenta" :weight bold)
-;;               ("CANCELLED" :foreground "forest green" :weight bold)
-;;               )))
+(setq org-todo-keyword-faces
+      (quote (("TODO" :foreground "red" :weight bold)
+              ("NEXT" :foreground "yellow" :weight bold)
+              ("DONE" :foreground "forest green" :weight bold)
+              ("WAITING" :foreground "orange" :weight bold)
+              ("HOLD" :foreground "magenta" :weight bold)
+              ("CANCELLED" :foreground "forest green" :weight bold)
+              )))
 
 (setq org-use-fast-todo-selection t)
 #+end_src
