--- a/config.org
+++ b/config.org
@@ -1964,6 +1964,12 @@ Calendar Setup
 
     ;; Don't show tasks as scheduled if they are already shown as a deadline
     (setq org-agenda-skip-scheduled-if-deadline-is-shown t)
+
+    ;; Disable line numbers in agenda
+    (defun no-display-numbers-hook ()
+      (display-line-numbers-mode 0)
+      )
+    (add-hook 'org-agenda-mode-hook 'no-display-numbers-hook)
     #+end_src
 
 *** Agenda Views
