--- a/config.org
+++ b/config.org
@@ -1903,7 +1903,7 @@ Calendar Setup
          (quote (("t" "todo" entry (file cadair-capture-file)
                   "* TODO %i%?\n" :clock-in t :clock-resume t)
                  ("x" "note" entry (file cadair-capture-file)
-                  "* TODO %?%c\n" :clock-in f)
+                  "* TODO %i%?\n" :clock-in f)
                  ("L" "Protocol" entry (file cadair-capture-file)
                   "* TODO Review %? [[%:link][%:description]] \nCaptured On: %U")
                  ("p" "Protocol" entry (file cadair-capture-file)
