--- a/config.org
+++ b/config.org
@@ -495,13 +495,11 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
 ** EDiff
 
 #+begin_src emacs-lisp
-(use-package ediff
-  :ensure nil
-  :custom
-    ediff-diff-options "-w" ; turn off whitespace checking
-    ediff-split-window-function 'split-window-horizontally
-    ediff-window-setup-function 'ediff-setup-windows-plain
-	)
+(setq
+ ediff-diff-options "-w" ; turn off whitespace checking
+ ediff-split-window-function #'split-window-horizontally
+ ediff-window-setup-function #'ediff-setup-windows-plain
+ )
 #+end_src
 
 * Appearance
